# computer-veision-class

./: main.py  pyproject.toml
computer_vision/: HandTrackingModule.py  VirtualPainter.py
