[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["João Maranhão <joaofelipemaranhao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
mediapipe = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
